[package]
name = "rendermd"
version = "0.1.0"
edition = "2024"
description = "A fast, cross-platform CLI tool that renders markdown from stdin with rich terminal formatting"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rendermd"
keywords = ["markdown", "terminal", "cli", "rendering"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
termimad = "0.25"
crossterm = "0.27"
anyhow = "1.0"
tokio = { version = "1.0", features = ["io-util", "rt-multi-thread", "macros", "fs", "io-std"] }
